--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
           run: |
             scversion="stable"
             wget -qO- "https://github.com/koalaman/shellcheck/releases/download/${scversion?}/shellcheck-${scversion?}.linux.x86_64.tar.xz" | tar -xJv
-            cp "shellcheck-${scversion}/shellcheck" /usr/bin/
+            mkdir -p $HOME/.local/bin
+            cp "shellcheck-${scversion}/shellcheck" $HOME/.local/bin/shellcheck
+            echo ::add-path::$HOME/.local/bin
         - name: Check shell code
           run: make check
