--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,6 @@ jobs:
             wget -qO- "https://github.com/koalaman/shellcheck/releases/download/${scversion?}/shellcheck-${scversion?}.linux.x86_64.tar.xz" | tar -xJv
             mkdir -p $HOME/.local/bin
             cp "shellcheck-${scversion}/shellcheck" $HOME/.local/bin/shellcheck
-            echo ::add-path::$HOME/.local/bin
+            echo "$HOME/.local/bin" >> $GITHUB_PATH
         - name: Check shell code
           run: make check
